--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -111,3 +111,7 @@ bSkipMovies=False
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
 
+[/Script/ARPG_ContentDemo.ACDGameDataSettings]
+ItemTable=/Game/Data/DT_ItemTable.DT_ItemTable
+RewardTable=/Game/Data/DT_RewardTable.DT_RewardTable
+
