--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -114,4 +114,5 @@ CustomStageCopyHandler=
 [/Script/ARPG_ContentDemo.ACDGameDataSettings]
 ItemTable=/Game/Data/DT_ItemTable.DT_ItemTable
 RewardTable=/Game/Data/DT_RewardTable.DT_RewardTable
+PlayerHUDClass=/Game/Blueprints/UI/WBP_PlayerHUD.WBP_PlayerHUD_C
 
